--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
      <form action="">
+        <h1>login form</h1>
         <div class="form-group">
             <label for="">Email id</label>
             <input type="text" class="form-control" required>
@@ -16,6 +17,7 @@
             <label for="">Email id</label>
             <input type="text" class="form-control" required>
         </div>
+        <input type="text" class="btn" value="login">
      </form>
     </div>
 </body>
